
[package]
name = "helion"
version = "0.3.2"
authors = ["bryal <96.bryal@gmail.com>"]
build = "build.rs"

[features]
profiling = ["cpuprofiler"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
captrs = "0.2"
clock_ticks = "0.1.0"
serial = "0.3"
simd = "0.2"

# Optional dependencies
cpuprofiler = { version = "0.0.3", optional = true }
